[tool.poetry]
name = "dj-conv"
version = "0.1.0"
description = "DJ Library Converter - Convert between different DJ software library formats"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.13.3"
PySide6 = "^6.5.0"
lxml = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dj-conv = "main:main"
traktor2rekordbox = "examples.convert_traktor_to_rekordbox:main"
